objects/EngagementMetric__c.object
<CustomObject>
    <label>Engagement Metric</label>
    <pluralLabel>Engagement Metrics</pluralLabel>
    <nameField>
        <displayFormat>EM-{0000}</displayFormat>
        <label>Engagement Metric Name</label>
        <type>AutoNumber</type>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
    <fields>
        <fullName>MetricType__c</fullName>
        <label>Metric Type</label>
        <type>Picklist</type>
        <picklist>
            <picklistValues>
                <fullName>Email Open</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Click-Through</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Social Media Interaction</fullName>
            </picklistValues>
        </picklist>
    </fields>
    <fields>
        <fullName>Value__c</fullName>
        <label>Value</label>
        <type>Number</type>
        <precision>18</precision>
        <scale>2</scale>
    </fields>
    <fields>
        <fullName>Timestamp__c</fullName>
        <label>Timestamp</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>RelatedCampaign__c</fullName>
        <label>Related Campaign</label>
        <type>Lookup</type>
        <referenceTo>Campaign</referenceTo>
    </fields>
</CustomObject>